fix import error (@repo/ui)

--- a/apps/host-next/package.json
+++ b/apps/host-next/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^18",
     "webpack": "5.93.0",
     "webpack-cli": "5.1.4",
-    "ui": "workspace:*"
+    "@repo/ui": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^20",
