--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "ui": "*"
+    "ui": "*",
+    "jotai":"*"
   },
   "workspaces": [
     "packages/*",
