--- a/apps/host-next/package.json
+++ b/apps/host-next/package.json
@@ -16,7 +16,8 @@
     "webpack": "5.93.0",
     "webpack-cli": "5.1.4",
     "@repo/ui": "workspace:*",
-    "@repo/jotai": "workspace:*"
+    "@repo/jotai": "workspace:*",
+    "@repo/hook": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^20",
