--- a/packages/hooks/tsconfig.lint.json
+++ b/packages/hooks/tsconfig.lint.json
@@ -3,6 +3,6 @@
   "compilerOptions": {
     "outDir": "dist"
   },
-  "include": ["."],
-  "exclude": ["node_modules", "dist", "build"]
+  "include": ["src", "turbo"],
+  "exclude": ["node_modules", "dist"]
 }
