--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -3,6 +3,6 @@
   "compilerOptions": {
     "outDir": "dist"
   },
-  "include": ["components"],
+  "include": ["components","ag-grid"],
   "exclude": ["node_modules", "dist", "build"]
 }
