--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -21,6 +21,7 @@
     "ag-grid-community": "^32.1.0",
     "ag-grid-react": "^32.1.0",
     "class-variance-authority": "^0.7.0",
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "react-hook-form": "^7.52.2"
   }
 }
